visual integration of the manifest editor finished

--- a/src/store/manifesteditor/i18n/en.json
+++ b/src/store/manifesteditor/i18n/en.json
@@ -17,7 +17,7 @@
         "version": "Version"
       }
     },
-    "deployment": {
+    "deployments": {
       "label": "Deployment",
       "form": {
         "domain": "Service Domain",
